--- a/html/index _two.html
+++ b/html/index _two.html
@@ -48,7 +48,7 @@
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
             </div>
               <div class="flex shrink-0 items-center gap-1">
-                <img class="h-8 w-auto " src="IMG/logo.png" alt="Your Company"> <span class="text-xl">Dev</span><span class="text-xl font-bold -ml-1">Board</span>
+                <img class="h-8 w-auto " src="../IMG/logo.png" alt="Your Company"> <span class="text-xl">Dev</span><span class="text-xl font-bold -ml-1">Board</span>
               </div>
               <div class="relative ml-3">
                 <div class="flex items-center  gap-4">
@@ -67,31 +67,39 @@
             <div  class="bg-white rounded-xl mt-3 ml-14 mr-14">
                 <p class="text-lg pt-6 pl-6 font-bold">Question-1: What are the different ways to select an element in the DOM?</p>
                 <div style="color: #3752FD33;">_________________________________________________________________________________________________________</div>
-                <p class="pt-5 pl-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa non veritatis cupiditate excepturi recusandae vitae obcaecati, vel officia eius. Necessitatibus?</p>
+                <p class="pt-5 pl-6">*ডিওএম এ উপাদান নির্বাচন করার বিভিন্ন উপায় রয়েছে। যথা : <br>
+                  1. প্রতিটি উপাদানের একটি ইউনিক আইডি থাকে, যা ব্যবহার করে সরাসরি সেই উপাদানটি নির্বাচন করা যায়।
+                  <br>
+                  2.একই ক্লাসের সব উপাদান নির্বাচন করতে ক্লাস নাম ব্যবহার করা হয়।
+                </p>
             </div>
             <!-- 2 -->
             <div  class="bg-white rounded-xl mt-3 ml-14 mr-14">
                 <p class="text-lg pt-6 pl-6 font-bold">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
                 <div style="color: #3752FD33;">_________________________________________________________________________________________________________</div>
-                <p class="pt-5 pl-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa non veritatis cupiditate excepturi recusandae vitae obcaecati, vel officia eius. Necessitatibus?</p>
+                <p class="pt-5 pl-6">*ইনারএইচটিএমএল, ইনারটেক্সট এবং টেক্সটকন্টের মধ্যে পার্থক্য হলো: <br>
+                1.এটি একটি DOM (Document Object Model) প্রপার্টি যা একটি HTML এলিমেন্টের ভিতরের HTML কন্টেন্টকে নির্দেশ করে। <br>
+                2.এটি একটি DOM প্রপার্টি যা একটি HTML এলিমেন্টের ভিতরের টেক্সট কন্টেন্টকে নির্দেশ করে, কিন্তু এটি HTML ট্যাগগুলোকে উপেক্ষা করে। <br>
+                3.এটি একটি DOM প্রপার্টি যা একটি HTML এলিমেন্টের সমস্ত টেক্সট কন্টেন্টকে নির্দেশ করে, কিন্তু এটি `innerText` এর মতো কিছুটা ভিন্ন।               </p>
             </div>
             <!-- 3 -->
             <div  class="bg-white rounded-xl mt-3 ml-14 mr-14">
                 <p class="text-lg pt-6 pl-6 font-bold">Question-3: What is event delegation in the DOM?</p>
                 <div style="color: #3752FD33;">_________________________________________________________________________________________________________</div>
-                <p class="pt-5 pl-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa non veritatis cupiditate excepturi recusandae vitae obcaecati, vel officia eius. Necessitatibus?</p>
+                <p class="pt-5 pl-6">*ডিওএম (ডকুমেন্ট অবজেক্ট মডেল) এ ইভেন্ট ডেলিগেশন হল একটি প্রযুক্তি যা ইভেন্ট হ্যান্ডলিংকে আরও কার্যকর এবং দক্ষভাবে পরিচালনা করতে সহায়তা করে। এটি মূলত একটি পদ্ধতি যেখানে একটি প্যারেন্ট এলিমেন্ট ইভেন্টগুলি পরিচালনা করে, পরিবর্তে প্রতিটি চাইল্ড এলিমেন্টের জন্য আলাদা আলাদা ইভেন্ট হ্যান্ডলার তৈরি করে ।</p>
             </div>
             <!-- 4 -->
             <div  class="bg-white rounded-xl mt-3 ml-14 mr-14">
                 <p class="text-lg pt-6 pl-6 font-bold">Question-4: What is event bubbling in the DOM?</p>
                 <div style="color: #3752FD33;">_________________________________________________________________________________________________________</div>
-                <p class="pt-5 pl-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa non veritatis cupiditate excepturi recusandae vitae obcaecati, vel officia eius. Necessitatibus?</p>
+                <p class="pt-5 pl-6">*এটি সাধারণত একটি ইভেন্টের প্রভাব বা প্রভাবের বিস্তার বোঝাতে ব্যবহৃত হয়। যখন একটি ইভেন্ট ঘটে, এটি একটি বুদবুদের মতো চারপাশে ছড়িয়ে পড়ে এবং বিভিন্ন উপাদান বা অবজেক্টের মধ্যে যোগাযোগ তৈরি করে।</p>
             </div>
             <!-- 5 -->
             <div  class="bg-white rounded-xl mt-3 ml-14 mr-14">
                 <p class="text-lg pt-6 pl-6 font-bold"> Question-5: How do you create, add, and remove elements using JavaScript?</p>
                 <div style="color: #3752FD33;">_________________________________________________________________________________________________________</div>
-                <p class="pt-5 pl-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa non veritatis cupiditate excepturi recusandae vitae obcaecati, vel officia eius. Necessitatibus?</p>
+                <p class="pt-5 pl-6">*জাভাস্ক্রিপ্ট ব্যবহার করে উপাদান তৈরি, যুক্ত এবং সরানোর জন্য আপনি DOM (Document Object Model) ম্যানিপুলেশন করতে পারবো । <br>
+                  DOM ম্যানিপুলেশন একটি গুরুত্বপূর্ণ অংশ জাভাস্ক্রিপ্টের, যা আপনাকে ওয়েব পৃষ্ঠার ইন্টারঅ্যাকটিভিটি বাড়াতে সাহায্য করে।</p>
             </div>
         </section>
     
